--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.0",
+    "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.13.0",
+    "@mui/material": "^5.13.4",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/node": "20.1.2",
     "@types/react": "18.2.6",
@@ -20,7 +20,7 @@
     "clsx": "^1.2.1",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.1",
-    "i18next": "^22.5.0",
+    "i18next": "^22.5.1",
     "i18next-browser-languagedetector": "^7.0.2",
     "i18next-http-backend": "^2.2.1",
     "next": "13.4.1",
@@ -29,14 +29,15 @@
     "react-dom": "18.2.0",
     "react-fast-marquee": "^1.6.0",
     "react-i18next": "^12.3.1",
-    "react-icons": "^4.8.0",
-    "react-intersection-observer": "^9.4.3",
+    "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.4.4",
     "react-redux": "^8.0.7",
     "swiper": "^9.3.2",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
   "devDependencies": {
+    "jest": "^29.5.0",
     "sass": "^1.62.1"
   }
 }
